--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,33 @@
-h1{
-    color: red;
+* {
+    border: black solid 1px;
+}
+
+body{
+    margin: 0;
+    width: 100%;
+    min-height: 100vh;
+}
+
+.header{
+    background-color: antiquewhite;
+    text-align: center;
+}
+
+.footer{
+    background-color: antiquewhite;
+    text-align: left;
+    padding: 30px 0 30px 15px;
+}
+
+.app{
+
+}
+
+.set-container{
+    display: flex;
+    
+}
+
+.set-card{
+    margin: 10px;
 }
