--- a/css/styles.css
+++ b/css/styles.css
@@ -19,13 +19,58 @@ body{
     padding: 30px 0 30px 15px;
 }
 
-.app{
+#app{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.searchContainer{
+    display: flex;
+    width: 50vw;
+    justify-content: center;
+    margin: 10px 0 0px;
+}
+
+.search-label{
+    /* margin-right: 5px; */
+}
+
+#search{
+    /* margin-right: 25px; */
+}
+
+.foundContainer{
+    display: flex;
+    align-items: center;
+    min-height: 25px;
+}
+
+.foundText{
+    margin: auto;
 }
 
 .set-container{
     display: flex;
-    
+    flex-direction: column;
+    align-items: center;
+    width: 50vw;
+    max-height: 75vh;
+    min-height: 50vh;
+    overflow-y: auto;
+}
+
+.set-button{
+    font-size: 1.3rem;
+    width: 90%;
+}
+
+.set-button:hover{
+    background-color: rgb(233, 214, 214);
+}
+
+.set-button:active{
+    background-color: rgb(229, 251, 229);
 }
 
 .set-card{
