--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,10 @@ body{
     min-height: 100vh;
 }
 
+h1{
+    margin: auto;
+}
+
 .header{
     background-color: antiquewhite;
     text-align: center;
@@ -17,6 +21,7 @@ body{
     background-color: antiquewhite;
     text-align: left;
     padding: 30px 0 30px 15px;
+    margin-top: 10px;
 }
 
 #app{
@@ -50,7 +55,7 @@ body{
     margin: auto;
 }
 
-.set-container{
+.sets-container{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -73,6 +78,164 @@ body{
     background-color: rgb(229, 251, 229);
 }
 
+.buttons-div{
+    margin: 10px 0px 0px;
+    min-width: 80%;
+}
+
+.learn-button{
+    background: rgb(245, 214, 244);
+    padding: 6px 25px;
+}
+
 .set-card{
     margin: 10px;
+}
+
+.title-div{
+    margin: 10px 0px 0px;
+}
+
+.middle-div{
+    display: flex;
+    min-width: 80%;
+    /* min-height: 75vh; */
+    align-items: center;
+    justify-content: space-around;
+}
+
+.arrow-btn{
+    background-color: beige;
+    padding: 20px 5px;
+    border-radius: 5px;
+}
+
+.arrow-btn:hover{
+    background-color: #eaea9b;
+    transform: scale(1.1);
+}
+
+.big-card{
+    background-color: rgb(245, 214, 244);
+    min-width: 80%;
+    height: 372px;
+    margin: 10px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.separator{
+    border-bottom:0.05rem solid #c1a304;
+}
+
+.label{
+    margin: 0px;
+    color: darkmagenta;
+    font-size: 0.8rem;
+    font-weight: 600;
+}
+
+.prompt, .answer-div{
+    font-size: 2rem;
+}
+
+.prompt{
+    text-align: center;
+}
+
+.answer-div:hover{
+    cursor: pointer;
+}
+
+.answer:hover{
+    color: blue;
+}
+
+.answer-div{
+    text-align: center;
+}
+
+.answer-placeholder{
+    color: rgb(201 151 200);
+}
+
+.answer-div:hover .answer-placeholder{
+    color: rgb(187, 117, 186);
+}
+
+.knowledge-div{
+    display: flex;
+    gap: 10px;
+}
+
+.learned{
+    background-color: #c9e4d0;
+    color: #127030;
+    border-color: #127030;
+}
+
+.learning{
+    background-color: #ebc3c3;
+    color: #db1d1d;
+    border-color: #db1d1d;
+}
+
+.learning, .learned{
+    height: 66px;
+    width: 100px;
+    border-radius: 5px;
+    border-width: 0px;
+    border-style: solid;
+}
+
+.learning:hover, .learned:hover{
+    border-style: dashed;
+    border-width: 2px;
+}
+
+.checked{
+    border-width: 3px;
+}
+
+.hide{
+   /* visibility: hidden; */
+   display: none;
+}
+
+.set-container{
+    background-color: rgb(247, 199, 140);
+    min-width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 10px 0 10px;
+}
+
+.pair-card-container{
+    background: rgb(245, 214, 244);
+    display: flex;
+    justify-content: space-between;
+    padding: 3px;
+    border-radius: 7px;
+    border: #c1a304 solid 2px;
+}
+
+.keyDiv{
+    border-right: 0.05rem solid black;
+    min-width: 40%;
+}
+
+.txt-left{
+    text-align: left;
+}
+
+.txt-right{
+    text-align: right;
+}
+
+.valueDiv{
+
 }
