--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     border: black solid 1px;
-}
+} */
 
 body{
     margin: 0;
@@ -15,6 +15,7 @@ h1{
 .header{
     background-color: antiquewhite;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .footer{
@@ -60,15 +61,19 @@ h1{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50vw;
+    width: 76vw;
     max-height: 75vh;
     min-height: 50vh;
     overflow-y: auto;
+    gap: 5px;
 }
 
 .set-button{
-    font-size: 1.3rem;
-    width: 90%;
+    font-size: 3rem;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 25% 50% 25%;
+    align-items: center;
 }
 
 .set-button:hover{
@@ -79,6 +84,21 @@ h1{
     background-color: rgb(229, 251, 229);
 }
 
+.set-buttons-helper{
+    font-size: 1rem;
+    display: grid;   
+}
+
+.number-terms{
+    grid-template-columns: 50% 50%;
+}
+
+.last-visit{
+    text-align: right;
+    justify-items: end;
+    justify-content: end;
+}
+
 .buttons-div{
     margin: 10px 0px 0px;
     min-width: 80%;
@@ -86,6 +106,11 @@ h1{
 
 .learn-button{
     background: rgb(245, 214, 244);
+    padding: 6px 25px;
+}
+
+.checkout-button{
+    background: rgb(241, 178, 217);
     padding: 6px 25px;
 }
 
