--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     border: black solid 1px;
 } */
 
+/* Elementos */
 body{
     margin: 0;
     width: 100%;
@@ -12,14 +13,14 @@ h1{
     margin: auto;
 }
 
-#answer-placeholder, #answer-text, #prompt-text{
-    margin-bottom: 0px;
-}
-
 header>h1{
     margin-top: 0;
     margin-bottom: 0;
 }
+
+/* Fin Elementos */
+
+
 
 .header{
     display: flex;
@@ -27,6 +28,13 @@ header>h1{
     text-align: center;
     min-height: 10vh;
     /* margin-bottom: 10px; */
+}
+
+#title-btn{
+    border: none;
+    width: 100%;
+    background-color: antiquewhite;
+    font-size: clamp(.5rem, .5rem + 5vw, 3rem);
 }
 
 .footer{
@@ -94,6 +102,35 @@ body.hasHover .set-button:hover{
     justify-content: end; */
 }
 
+/* Pagina Terminos */
+
+.terms-ammount-div{
+    margin: 10px 0;
+    /* background-color: #127030; */
+}
+
+.terms-ammount-div>p{
+    margin: 0 2px;
+    padding: 0;
+}
+
+.buttons-div{
+    /* margin: 10px 0px 0px; */
+    min-width: 80%;
+}
+
+/* Fin Pagina Terminos */
+
+
+
+/* Pagina Learning */
+
+#answer-placeholder, #answer-text, #prompt-text{
+    margin-bottom: 0px;
+}
+
+/* Fin Pagina Learning */
+
 
 
 .searchContainer{
@@ -119,11 +156,6 @@ body.hasHover .set-button:hover{
 
 .foundText{
     margin: auto;
-}
-
-.buttons-div{
-    /* margin: 10px 0px 0px; */
-    min-width: 80%;
 }
 
 .learn-button{
