--- a/css/styles.css
+++ b/css/styles.css
@@ -382,6 +382,7 @@ body.hasHover .learned:hover{
 
 .valueDiv{
     padding-left: 10px;
+    /* text-align: start;  */
 }
 
 .keyDiv, .valueDiv{
@@ -507,7 +508,9 @@ body.hasHover .learned:hover{
     }
 
     .valueDiv{
+        padding-left: 5%;
         padding-right: 5%;
+        /* text-align: right; */
     }
 
     .pair-card-container{
