--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ header>h1{
     background-color: antiquewhite;
     text-align: left;
     min-height: 10vh;
+    margin-top: 20px;
     /* padding: 30px 0 30px 15px; */
     /* margin-top: 10px; */
 }
@@ -51,7 +52,7 @@ header>h1{
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    overflow: hidden;
+    /* overflow: hidden; */
     min-height: 80vh;
 }
 
@@ -60,7 +61,7 @@ header>h1{
     flex-direction: column;
     align-items: center;
     width: 76vw;
-    max-height: 75vh;
+    /* max-height: 75vh; */
     min-height: 50vh;
     overflow-y: auto;
     gap: 5px;
@@ -122,8 +123,6 @@ body.hasHover .set-button:hover{
 
 /* Fin Pagina Terminos */
 
-
-
 /* Pagina Learning */
 
 #answer-placeholder, #answer-text, #prompt-text{
@@ -132,13 +131,13 @@ body.hasHover .set-button:hover{
 
 /* Fin Pagina Learning */
 
-
-
 .searchContainer{
     display: flex;
-    width: 50vw;
+    /* width: 50vw; */
     justify-content: center;
-    margin: 10px 0 0px;
+    margin: 10px 10px;
+    padding: 5px 5px;
+    font-size: clamp(.2rem, .2rem + 3vw, 1.5rem);
 }
 
 .search-label{
@@ -232,6 +231,22 @@ body.hasHover .set-button:hover{
     padding: 20px 5px;
     border-radius: 5px;
 }
+
+.red-arrow-div{
+    display: flex;
+    background-color: #f34143;
+    border-radius: 5px;
+    padding: 20px;
+    align-items: center;
+}
+
+.red-arrow-text{
+    font-family: monospace;
+    font-size: larger;
+    font-weight: 600;
+    margin: 0;
+}
+
 
 body.hasHover  .arrow-btn:hover{
     background-color: #eaea9b;
@@ -515,6 +530,10 @@ body.hasHover .learned:hover{
 
     .pair-card-container{
         padding: 2px;
+    }
+
+    .red-arrow-div{
+        padding-left: 60%;
     }
 }
 
